Upgraded to 4.5.1, added H2 & Mongo dbs